--- a/submission-research1/notebooks/exploratory_analysis.ipynb
+++ b/submission-research1/notebooks/exploratory_analysis.ipynb
@@ -1,22 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_processing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_data, clean_data\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvisualization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plot_data\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Load and clean data\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
-     ]
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from src.data_processing import load_data, clean_data\n",
@@ -27,7 +24,7 @@
     "cleaned_data = clean_data(data)\n",
     "\n",
     "# Plot the cleaned data\n",
-    "plot_data(cleaned_data, x_col=\"feature1\", y_col=\"value\")\n"
+    "plot_data(cleaned_data, x_col=\"feature1\", y_col=\"value\")"
    ]
   }
  ],
